; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_user-util.c_putgrent_sane.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_user-util.c_putgrent_sane.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.group = type { i32 }

@errno = common dso_local global i64 0, align 8
@EIO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @putgrent_sane(%struct.group* %0, %struct.group* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.group*, align 8
  %5 = alloca %struct.group*, align 8
  store %struct.group* %0, %struct.group** %4, align 8
  store %struct.group* %1, %struct.group** %5, align 8
  %6 = load %struct.group*, %struct.group** %4, align 8
  %7 = call i32 @assert(%struct.group* %6)
  %8 = load %struct.group*, %struct.group** %5, align 8
  %9 = call i32 @assert(%struct.group* %8)
  store i64 0, i64* @errno, align 8
  %10 = load %struct.group*, %struct.group** %4, align 8
  %11 = load %struct.group*, %struct.group** %5, align 8
  %12 = call i64 @putgrent(%struct.group* %10, %struct.group* %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %2
  %15 = load i32, i32* @EIO, align 4
  %16 = call i32 @errno_or_else(i32 %15)
  store i32 %16, i32* %3, align 4
  br label %18

17:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %18

18:                                               ; preds = %17, %14
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i32 @assert(%struct.group*) #1

declare dso_local i64 @putgrent(%struct.group*, %struct.group*) #1

declare dso_local i32 @errno_or_else(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
